--- a/Quiz/src/org/gordon/quiz/visitor/README
+++ b/Quiz/src/org/gordon/quiz/visitor/README
@@ -1,11 +1,11 @@
 The set of classes in this package demonstrates the use of the Gang of Four Visitor pattern, employing interfaces
 for both the visitor and the objects being visited.  You can run the main TestDriver class to see it in action.
 
-The intended use for the Visitor pattern is to add new functionality to an existing class, say, if you are using a
+One intended use for the Visitor pattern is to add new functionality to an existing class, say, if you are using a
 third-party library you can't modify.
 
 In this case we have Animals with a couple of defined behaviors, eating and vocalizing, and through the Visitor
-pattern we add a way to "train" each animal.
+pattern we add a way to "train" or "groom" each animal.
 
 More generally, this shows a way to implement "double dispatch" in Java.  Here this concept is something like:
 applyFunc((virtual) AnimalVisitor visitor, (virtual) Animal animal).  In other words you want to be able to apply
